Code cleanup and added maven site generation